--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<script type="text/javascript" src="script.js"></script>
 	</head>
 	<body>
-		body
+		<h1>Game of rock paper scissors in the console !</h1>
+		<p>Hit control + shift + i to access the results.</p>
 	</body>
+
 </html>
