Add buttons for game + remove function call for game

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 	<body>
 		<h1>Game of rock paper scissors in the console !</h1>
 		<p>Hit control + shift + i to access the results.</p>
+
+		<div class="playerSelection">
+		<button id="rock">Rock</button>	
+		<button id="paper">Paper</button>	
+		<button id="scissors">Scissors</button>	
+		</div>
 	</body>
 
 </html>
