Select playerSelection by click + return id of clicked button in console

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Index</title>
-		<script type="text/javascript" src="script.js"></script>
+		<script type="text/javascript" src="script.js" defer></script>
 	</head>
 	<body>
 		<h1>Game of rock paper scissors in the console !</h1>
