--- a/index.html
+++ b/index.html
@@ -10,11 +10,22 @@
 		<h1>Game of rock paper scissors in the console !</h1>
 		<p>Hit control + shift + i to access the results.</p>
 
-		<div class="playerSelection">
-		<button id="rock">Rock</button>	
-		<button id="paper">Paper</button>	
-		<button id="scissors">Scissors</button>	
+		<div class="game-box" >
+			<h2>Make your choice!</h2>
+
+			<div class="playerSelection">
+				<button id="rock">Rock</button>	
+				<button id="paper">Paper</button>	
+				<button id="scissors">Scissors</button>	
+			</div>
 		</div>
+
+		<div class="result-box">
+			<h3>Did you win ? </h3>
+
+			<div id="display-result"></div>
+		</div>
+
 	</body>
 
 </html>
