--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 		<script type="text/javascript" src="script.js" defer></script>
 	</head>
 	<body>
-		<h1>Game of rock paper scissors in the console !</h1>
-		<p>Hit control + shift + i to access the results.</p>
+		<h1>Game of rock paper scissors !</h1>
 
 		<div class="game-box" >
-			<h2>Make your choice!</h2>
+			<h2>Make your choice :</h2>
 
 			<div class="playerSelection">
 				<button id="rock">Rock</button>	
@@ -21,7 +20,7 @@
 		</div>
 
 		<div class="result-box">
-			<h3>Did you win ? </h3>
+			<h3>Rules : First to 5 points !</h3>
 
 			<div id="display-result"></div>
 		</div>
